package com.esfe.sistemagimnasio.enums;

public enum EstadoMembresiaAsignada {
    ACTIVA,
    VENCIDA,
    CANCELADA
}